chore: updated workflow to use java version 25.
Signed-off-by: aniebietafia <aniebietafia87@gmail.com>

fix: fixed failing test case in BulkDocumentUpload

Signed-off-by: aniebietafia <aniebietafia87@gmail.com>

fix: fixed failing test case in BulkDocumentUpload

Signed-off-by: aniebietafia <aniebietafia87@gmail.com>